worked on the about section and also made little adjustments on reservation section

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </nav>
 
         <!-- Sections -->
-        <section id="reservation" class="f">
+        <section id="reservation" class="f s">
             <div class="reservation-text">
                 <h2>Delivering the best of African cuisine across the continent</h2>
                 <p>Experience the uniqueness and rich variety of African food from anywhere in the continent</p>
-                <div class="reservation-btn btn">
-                    <a href="#reservation">Make a reservation</a>
-                    <a href="#menu">View our Menu</a>
+                <div class="reservation-btn">
+                    <a href="#reservation" class="btn bg-black">Make a reservation</a>
+                    <a href="#menu" class="btn bg-white">View our Menu</a>
                 </div>
             </div>
             <div class="reservation-img">
@@ -36,6 +36,26 @@
                     
                 </div>
                 <div class="img2"></div>
+            </div>
+        </section>
+
+        <section id="about">
+            <h4 class="text-align">Providing the finest dining experience for over 17 years</h4>
+            <div class="about-btn f sa">
+                <a href="#" class="btn bg-black btn-small">6 Locations</a>
+                <a href="#" class="btn bg-black btn-small">86 Chefs</a>
+                <a href="#" class="btn bg-black btn-small">14 Menus</a>
+            </div>
+
+            <div class="our-story f v h sa">
+                <div class="our-story-text">
+                    <h3>OUR STORY</h3>
+                    <p>Founded in 2001, with a promise to deliver the finest dining experience in the country. We have consistently kept that promise while something something something that sounds really fancy</p>
+                </div>
+                <div class="our-story-img">
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </section>
     </div>
