completed the menu section with text and images

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </nav>
 
         <!-- Sections -->
+        <!-- Section: Reservation -->
         <section id="reservation" class="f s">
             <div class="reservation-text">
                 <h2>Delivering the best of African cuisine across the continent</h2>
@@ -39,6 +40,7 @@
             </div>
         </section>
 
+        <!-- Section: About -->
         <section id="about">
             <h4 class="text-align">Providing the finest dining experience for over 17 years</h4>
             <div class="about-btn f sa">
@@ -58,6 +60,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- Section: Menu -->
+        <scetion id="menu">
+            <h3 class="text-align">WHAT WE OFFER YOU</h3>
+            <div class="our-menu f v h sa">
+                <div class="our-menu-text">
+                    <h3>FINE DINING</h3>
+                    <p>Exquisitely prepared meals from locally sourced ingredients. finely crafted and served in a refreshingly soothing atmosphere</p>
+                </div>
+                <div class="our-menu-img"></div>
+            </div>
+
+            <div class="our-chef f v h sa">
+                <div class="our-chef-img"></div>
+                <div class="our-chef-text">
+                    <h3>EXPERT CHEFS</h3>
+                    <p>Our chefs are specially selected from the best African culinary academies and are skilled in recreating your favourite dishes to perfection</p>
+                </div>
+            </div>
+
+            <div class="our-dish f v h sa">
+                <div class="our-dish-text">
+                    <h3>VERSATILE DISHES</h3>
+                    <p>Choose from hundreds of your favourite African dishes, all expertly-made with best ingredients and a lot of love</p>
+                </div>
+                <div class="our-dish-img"></div>
+            </div>
+        </scetion>
     </div>
     
     
