completed what client said about us. Also added a javascript file for smooth scrolling map. couldn't figure out how to insert map

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <!-- Section: Menu -->
-        <scetion id="menu">
+        <section id="menu">
             <h3 class="text-align">WHAT WE OFFER YOU</h3>
             <div class="our-menu f v h sa">
                 <div class="our-menu-text">
@@ -87,10 +87,68 @@
                 </div>
                 <div class="our-dish-img"></div>
             </div>
-        </scetion>
+        </section>
+
+        <!-- Section: About Us -->
+        <section class="about-us">
+            <h3 class="text-align">WHAT OUR CLIENTS SAY ABOUT US</h3>
+            <div class="about-us-flex f v h sa">
+                <div class="about-us-content f c">
+                    <div class="content-img f v h hs">
+                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <h3>Ebuka Okoro</h3>
+                    </div>
+                    <p>I had my birthday party here last year and it was my finest dining experience</p>
+                    <p class="date">29 May 2020</p>
+                </div>
+
+                <div class="about-us-content f c">
+                    <div class="content-img f v h hs">
+                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <h3>Funmilola Ajayi</h3>
+                    </div>
+                    <p>My friends suceeded in dragging me along with them after weeks of excuses. They were right all along</p>
+                    <p class="date">17 August 2020</p>
+                </div>
+
+                <div class="about-us-content f c">
+                    <div class="content-img f v h hs">
+                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <h3>Cami Johnson</h3>
+                    </div>
+                    <p>I am an African-American currently on holiday in Africa. I am amazed at how delicious this dishes are</p>
+                    <p class="date">26 November 2020</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section: Contact Us -->
+        <section id="contact">
+            <div class="contact-content f v h s">
+                <div id="map"></div>
+                <div class="contact-details">
+                    <h3>CONTACT US</h3>
+                    <div>
+                        <p>146, Grey Close, Victoria Islland</p>
+                    </div>
+                    <div>
+                        <p>+234-876-5478-908</p>
+                    </div>
+                    <div>
+                        <p>contact@blackbuffet.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     
     
-
+<!-- Local JS File -->
+<script src="script.js"></script>
+<!-- Google Maps -->
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClmCfXt03RBItmKgNwEu6flZizNJoN2D8&callback=initMap&libraries=&v=weekly"
+  defer
+></script>
 </body>
 </html>
