Started work on the location map. Made other changes that i can't recall because this took a stretch of days but i changed the border radius of all buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Nav Bar -->
         <nav class="nav-bar f s h v">
             <div class="logo f v "><span class="icon-circle"></span>
-                <h1 class="logo-name">BLACKBUFFET</h1>
+                <h1 class="logo-name"><span class="first-letter">B</span>LACKBUFFET</h1>
             </div>
             <ul class="f v h he">
                 <li><a href="#about">About</a></li>
@@ -105,7 +105,7 @@
                 <div class="about-us-content f c">
                     <div class="content-img f v h hs">
                         <img src="/css/img/setting1.jpg" alt="client-img">
-                        <h3>Funmilola Ajayi</h3>
+                        <h3>Funmilayo Wilson</h3>
                     </div>
                     <p>My friends suceeded in dragging me along with them after weeks of excuses. They were right all along</p>
                     <p class="date">17 August 2020</p>
@@ -124,17 +124,20 @@
 
         <!-- Section: Contact Us -->
         <section id="contact">
-            <div class="contact-content f v h s">
+            <div class="contact-content f v s">
                 <div id="map"></div>
-                <div class="contact-details">
+                <div class="contact-details f c h">
                     <h3>CONTACT US</h3>
                     <div>
-                        <p>146, Grey Close, Victoria Islland</p>
+                        <i class="fas fa-map-marker-alt fx-3a"></i>
+                        <p>146, Grey Close, Victoria Island</p>
                     </div>
                     <div>
+                        <i class="fas fa-phone"></i>
                         <p>+234-876-5478-908</p>
                     </div>
                     <div>
+                        <i class="fas fa-envelope"></i>
                         <p>contact@blackbuffet.com</p>
                     </div>
                 </div>
@@ -143,12 +146,12 @@
     </div>
     
     
-<!-- Local JS File -->
-<script src="script.js"></script>
-<!-- Google Maps -->
-<script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClmCfXt03RBItmKgNwEu6flZizNJoN2D8&callback=initMap&libraries=&v=weekly"
-  defer
-></script>
+    <!-- Local JS File -->
+    <script src="script.js"></script>
+    <!-- Google Maps -->
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
+        async>
+    </script>
 </body>
 </html>
