added contact list beside map. Also adjusted font size of texts. Map still not showing in this commit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>Restaurant</title>
@@ -124,19 +125,19 @@
 
         <!-- Section: Contact Us -->
         <section id="contact">
-            <div class="contact-content f v s">
+            <div class="contact-content f sa">
                 <div id="map"></div>
-                <div class="contact-details f c h">
+                <div class="contact-details f c h hs">
                     <h3>CONTACT US</h3>
-                    <div>
-                        <i class="fas fa-map-marker-alt fx-3a"></i>
+                    <div class="f v h hs">
+                        <i class="fas fa-map-marker-alt"></i>
                         <p>146, Grey Close, Victoria Island</p>
                     </div>
-                    <div>
+                    <div class="f v h hs">
                         <i class="fas fa-phone"></i>
                         <p>+234-876-5478-908</p>
                     </div>
-                    <div>
+                    <div class="f v h hs">
                         <i class="fas fa-envelope"></i>
                         <p>contact@blackbuffet.com</p>
                     </div>
