--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="about-us-flex f v h sa">
                 <div class="about-us-content f c">
                     <div class="content-img f v h hs">
-                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <img src="../css/img/man2.jpeg" alt="client-img">
                         <h3>Ebuka Okoro</h3>
                     </div>
                     <p>I had my birthday party here last year and it was my finest dining experience</p>
@@ -111,7 +111,7 @@
 
                 <div class="about-us-content f c">
                     <div class="content-img f v h hs">
-                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <img src="../css/img/woman.jpeg" alt="client-img">
                         <h3>Funmilayo Wilson</h3>
                     </div>
                     <p>My friends suceeded in dragging me along with them after weeks of excuses. They were right all along</p>
@@ -120,7 +120,7 @@
 
                 <div class="about-us-content f c">
                     <div class="content-img f v h hs">
-                        <img src="/css/img/setting1.jpg" alt="client-img">
+                        <img src="../css/img/man1.jpeg" alt="client-img">
                         <h3>Cami Johnson</h3>
                     </div>
                     <p>I am an African-American currently on holiday in Africa. I am amazed at how delicious this dishes are</p>
