added animation to the images in What We Offer

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <h3>FINE DINING</h3>
                     <p>Exquisitely prepared meals from locally sourced ingredients. finely crafted and served in a refreshingly soothing atmosphere</p>
                 </div>
-                <div class="our-menu-img"></div>
+                <div class="our-menu-img img"></div>
             </div>
 
             <div class="our-chef f v h sa">
-                <div class="our-chef-img"></div>
+                <div class="our-chef-img img"></div>
                 <div class="our-chef-text">
                     <h3>EXPERT CHEFS</h3>
                     <p>Our chefs are specially selected from the best African culinary academies and are skilled in recreating your favourite dishes to perfection</p>
@@ -92,7 +92,7 @@
                     <h3>VERSATILE DISHES</h3>
                     <p>Choose from hundreds of your favourite African dishes, all expertly-made with best ingredients and a lot of love</p>
                 </div>
-                <div class="our-dish-img"></div>
+                <div class="our-dish-img img"></div>
             </div>
         </section>
 
